client/src/components/ModuleCard.css
.module-box {
  display: flex;
  flex-direction: column;
  justify-content: center;
  box-sizing: border-box;

  font-family: sans-serif;

  gap: 0;

  width: 95%;

  margin: 10px auto;

  padding: 20px;
  transition: transform 0.15s ease, box-shadow 0.15s ease;
}

.module-box:hover {
  transform: translateY(-2px);
}

.module-code {
  position: relative;
  z-index: 10;
  color: white;
  background-color: #4b0082;

  font-size: 1.3em;

  border-radius: 20px;

  height: auto;

  text-align: center;
  box-shadow: 0px 4px 10px rgba(0,0,0,0.08);

  margin: 0px auto;
  margin-bottom: -60px;

  padding: 10px;
}

.module-title {
  margin: 0 auto;
  margin-top: 50px;
  margin-bottom: 20px;
  font-weight: 700;
}

.module-info {
  display: flex;
  background-color: white;
  flex-direction: column;
  flex-wrap: wrap;

  font-size: 1.5em;

  margin: 0 auto;
  box-shadow: 0px 4px 10px rgba(0,0,0,0.08);
  border: 1px solid black;
  border-radius: 15px;

  text-align: center;

  height: auto;

  width: 100%;

  padding: 10px;

  transition: transform 0.15s ease, box-shadow 0.15s ease;
}

module-info:hover {
  box-shadow: 0px 6px 16px rgba(0,0,0,0.3);
}

.dropdown-box {
  display: flex;
  justify-content: center;

}

.dropdown-btn {
  display: block;
  background-color: #9d72bc9d;
  color: white;
  font-size: 16px;
  border: none;
  margin: 0 auto;
  cursor: pointer;

  border-radius: 15px;

  min-height: 44px;
  min-width: 44px;
}

.dropdown-icon {
  max-width: 44px;
  max-height: 44px;
}

.module-title-dropdown-row {
    position: relative;
  }

.dropdown-btn:hover {
  background-color: #795096;
  transition: box-shadow 2s ease;
}

.dropdown-content {
  position: absolute;
  display: block;
  left: 40px;
  top: 120px;
  border-radius: 20px;
  background-color: #f1f1f1;
  min-width: 220px;
  width: 80%;
  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
  z-index: 9999;
}

.dropdown-link{
  color: black;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
  z-index: 100;
}

.dropdown-content a:hover {
  background-color: #ddd;
}

@media (min-width: 768px) {
  .module-box {
    display: flex;
    flex-direction: row;
    justify-content: center;
    box-sizing: border-box;

    font-family: sans-serif;

    gap: 0;

    width: 95%;

    margin: 10px auto;
    position: relative;

    padding: 0;
  }

  .module-code {
    display: flex;
    align-items: center;
    justify-content: center;
    
    width: 10vw;

    height: auto;

    font-weight: bold;

    margin: 25px auto;
    margin-right: -30px;
    box-shadow: 7px 0 5px -2px rgba(0,0,0,0.1);
    padding: 25px;
  }

  .module-title {
    display: flex;
    margin: auto 25px;
    width: 90%;
  }

  .module-title p {
    margin-right: 5px;
    margin-bottom: 0px;
  }

  .module-title-dropdown-row {
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 100%;
    position: relative;
  }

  .module-info {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;

    margin: 25px auto;
    margin-left: 0;

    width: 60vw;

    padding: 25px;
  }

  .dropdown-btn {
    padding: 5px;
    font-size: 10px;
  }

  .dropdown-link {
    padding: 5px;
  }

  .dropdown-content {
    position: absolute;
    display: block;
    left: 10px;
    top: 80px;
    font-weight: 300;
    font-size: 20px;
    margin-top: 8px;
    border-radius: 15px;
    background-color: #f5f5f5;
    min-width: 100px;
    width: 100%;
    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
    z-index: 9999;
}
}

